# vexus

./: Cargo.toml  LICENSE  README.md
examples/: rps.rs  sine_wave.rs  square_function.rs  tic_tac_toe.rs  xor.rs  xor_file.rs
src/: lib.rs  neural_network.rs
