[package]
name = "neural_network"
version = "1.0.0"
edition = "2021"
description = "A neural network created and trainer struct to make your own AI models."
license = "MIT"
authors = ["Vexar413"]
readme = "README.md"
repository = "https://github.com/Vexo413/neural_network"
keywords = ["ai", "brain", "neural", "network"]

[dependencies]
rand = "0.9.0"
