[package]
name = "vexus"
version = "2.0.0"
edition = "2021"
description = "A neural network builder and trainer struct to make your own AI models."
license = "MIT"
authors = ["Vexar413"]
readme = "README.md"
repository = "https://github.com/Vexo413/neural_network"
keywords = ["ai", "brain", "neural", "network", "neural_network"]

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
